Fri Oct 7- many fixes

--- a/src/main/resources/templates/tickets.html
+++ b/src/main/resources/templates/tickets.html
@@ -17,20 +17,27 @@
     <thead class="thead-dark">
     <tr>
         <th scope="col">#</th>
+        <th scope="col">Number</th>
         <th scope="col">Title</th>
         <th scope="col">Description</th>
         <th scope="col">Application</th>
+        <th scope="col">Application Obj</th>
+        <th scope="col">Release</th>
         <th scope="col">Release Date</th>
+        <th scope="col">Release Date Obj</th>
     </tr>
     </thead>
     <tbody>
 
     <tr th:each="item : ${tickets}">
         <td th:text="${item.id}"></td>
+        <td th:text="${item.number}"></td>
         <td th:text="${item.title}"></td>
         <td th:text="${item.description}"></td>
+        <td th:text="${item.applicationName}"></td>
         <td th:text="${item.application.name}"></td>
-        <td th:text="${item?.release?.releaseDate}"></td>
+        <td th:text="${item.releaseDate}"></td>
+        <td th:text="${item.release.releaseDate}"></td>
     </tr>
     </tbody>
 </table>
