--- a/src/main/resources/templates/releases.html
+++ b/src/main/resources/templates/releases.html
@@ -18,6 +18,7 @@
             <thead class="thead-dark">
             <tr>
                 <th scope="col">#</th>
+                <th scope="col">Name</th>
                 <th scope="col">Release Date</th>
                 <th scope="col">Description</th>
             </tr>
@@ -26,6 +27,7 @@
 
             <tr th:each="item : ${releases}">
                 <td th:text="${item.id}"></td>
+                <td th:text="${item.name}"></td>
                 <td th:text="${item.releaseDate}"></td>
                 <td th:text="${item.description}"></td>
             </tr>
